--- a/src/client/index.html
+++ b/src/client/index.html
@@ -70,5 +70,6 @@
 
 	<script src="admin/admin.service.js"></script>
 	<script src="admin/admin.controller.js"></script>
+	<script src="admin/edit.controller.js"></script>
 </body>
 </html>
