--- a/src/client/products/products.html
+++ b/src/client/products/products.html
@@ -24,7 +24,7 @@
 
 		<div ng-repeat="product in products | filter:productTitle | filter:productFilter" class="items">
 		
-			<p>Item: <a ng-href="#/product/{{ product.id }}"> {{ product.title }} </a></p>
+			<p>Item: <a href="#/product/{{product.title}}"> {{ product.title }}</a></button></p>
 			<p>Price: {{ product.price }}</p>
 			<p>Category: {{ product.category }}</p>
 			<img src="img/{{ product.image }}">
